<resources>
    <string name="app_name">WaterTrack</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>

    <string-array name="theme_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System Sync</item>
    </string-array>

    <string-array name="meterStatus">
        <item>0 - Inactive</item>
        <item>1 - Active</item>
        <item>2 - With Problems</item>
    </string-array>

    <string-array name="meterClass">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="meterUnitys">
        <item>1 - m^3</item>
        <item>2 - m^3/h</item>
        <item>3 - L/s</item>
        <item>5 - bar</item>
        <item>6 - Litres</item>
        <item>7 - Decilitres</item>
    </string-array>


    <!-- GENERAL -->
    <string name="general_continue">Continue</string>
    <string name="general_confirm">Confirm</string>
    <string name="general_ok">Ok</string>
    <string name="general_yes">Yes</string>
    <string name="general_save">Save</string>
    <string name="general_dontSave">Don\'t Save</string>
    <string name="general_no">No</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_delete">Delete</string>
    <string name="general_selectValidOption">Please select a valid option</string>
    <string name="general_requiredField">Required Field</string>
    <!-- AUTH ACTIVITY | LOGIN FRAGMENT -->
    <string name="authActivity_LoginFrag_TextField_Email">Email</string>
    <string name="authActivity_LoginFrag_TextField_Password">Password</string>
    <string name="authActivity_LoginFrag_Button_Login">Login</string>
    <string name="authActivity_LoginFrag_TextButton_ForgotPassword">Forgot Password?</string>
    <string name="authActivity_LoginFrag_TextButton_NewUser">New User? Register Now</string>
    <string name="authActivity_LoginFrag_Field_RequiredField_Error">Required field</string>
    <string name="authActivity_LoginFrag_LocalDB_Insert_Error">Wasn\'t able to save the user info. Please login again.</string>
    <!-- AUTH ACTIVITY | REGISTER FRAGMENT -->
    <string name="authActivity_RegisterFrag_TextField_Email">Email</string>
    <string name="authActivity_RegisterFrag_TextField_Password">Password</string>
    <string name="authActivity_RegisterFrag_TextField_ConfirmPassword">Confirm Password</string>
    <string name="authActivity_RegisterFrag_Button_Register">Register</string>
    <string name="authActivity_RegisterFrag_TextButton_OldUser">Already a User? Login Now</string>
    <string name="authActivity_RegisterFrag_VerifyEmail">User created with success. Please check your email address to verify your account.</string>
    <string name="authActivity_RegisterFrag_Field_RequiredField_Error">Required field</string>
    <string name="authActivity_RegisterFrag_Field_PasswordsDiferent_Error">Passwords don\'t match</string>
    <string name="authActivity_RegisterFrag_Field_EmailNotValid_Error">This email is not valid</string>
    <!-- MAIN ACTIVITY -->
    <string name="mainActivity_SideMenu_Settings">Settings</string>
    <string name="mainActivity_SideMenu_Reports">Reports</string>
    <string name="mainActivity_SideMenu_Credits">Credits</string>
    <string name="mainActivity_SideMenu_Logout">Logout</string>
    <string name="mainActivity_AlertDialog_BackPressed_AddContador_Title">Exit</string>
    <string name="mainActivity_AlertDialog_BackPressed_AddContador_Desc">Do you wish to exit without saving?</string>
    <!-- MAIN ACTIVITY | MAIN VIEW -->
    <string name="mainActivity_MainViewFrag_LabelConadores">My Meters</string>
    <string name="mainActivity_MainViewFrag_TextView_NothingToDisplay">Theres no Meters to be displayed.</string>
    <string name="mainActivity_MainViewFrag_SnackBar_NothingToSearch">Theres no Meters to be searched.</string>
    <string name="mainActivity_MainViewFrag_TextField_Search">Search</string>
    <string name="mainActivity_MainViewFrag_PopUpMenu_Address">Address</string>
    <string name="mainActivity_MainViewFrag_PopUpMenu_Name">Name</string>
    <string name="mainActivity_MainViewFrag_PopUpMenuAdd_Meter">Add Meter</string>
    <string name="mainActivity_MainViewFrag_PopUpMenuAdd_Reading">Add Reading</string>
    <string name="mainActivity_MainViewFrag_SnackBar_OptionNotSelected">Please select address or name.</string>
    <!-- MAIN ACTIVITY | ADD CONTADOR -->
    <string name="mainActivity_AddContadorFrag_TextField_Address">Address</string>
    <string name="mainActivity_AddContadorFrag_ComboBox_Residents">Resident</string>
    <string name="mainActivity_AddContadorFrag_ComboBox_Type">Type</string>
    <string name="mainActivity_AddContadorFrag_ComboBox_Enterprise">Enterprise</string>
    <string name="mainActivity_AddContadorFrag_ComboBox_Class">Class</string>
    <string name="mainActivity_AddContadorFrag_DatePicker_Date">Installation Date</string>
    <string name="mainActivity_AddContadorFrag_DatePicker_Date_IconDesc">Open Date Picker</string>
    <string name="mainActivity_AddContadorFrag_TextField_MaxCap">Maximum Capacity</string>
    <string name="mainActivity_AddContadorFrag_ComboBox_MeasureUnity">Measure Unity</string>
    <string name="mainActivity_AddContadorFrag_TextField_SupportedTemp">Supported Temperature</string>
    <string name="mainActivity_AddContadorFrag_ComboBox_Status">Status</string>
    <!-- MAIN ACTIVITY | DETAILS CONTADOR -->
    <string name="mainActivity_DetailsContadorFrag_Header">Meter</string>
    <string name="mainActivity_DetailsContadorFrag_infoRow_Contador_Name">Meter</string>
    <string name="mainActivity_DetailsContadorFrag_infoRow_Contador_Address">Meter</string>
    <!-- MAIN ACTIVITY | DETAILS CONTADOR | RV-->
    <string name="mainActivity_DetailsContadorFrag_RV_fieldsList_ID">Reference</string>
    <string name="mainActivity_DetailsContadorFrag_RV_fieldsList_Address">Counter Address</string>
    <string name="mainActivity_DetailsContadorFrag_RV_fieldsList_Username">Resident</string>
    <string name="mainActivity_DetailsContadorFrag_RV_fieldsList_Description">Type</string>
    <string name="mainActivity_DetailsContadorFrag_RV_fieldsList_EnterpriseName">Company</string>
    <string name="mainActivity_DetailsContadorFrag_RV_fieldsList_Classe">Class</string>
    <string name="mainActivity_DetailsContadorFrag_RV_fieldsList_InstalationDate">Installation Date</string>
    <string name="mainActivity_DetailsContadorFrag_RV_fieldsList_ShutdownDate">Deactivation Date</string>
    <string name="mainActivity_DetailsContadorFrag_RV_fieldsList_MaxCapacity">Maximum Capacity</string>
    <string name="mainActivity_DetailsContadorFrag_RV_fieldsList_MeasureUnity">Unit of Measure</string>
    <string name="mainActivity_DetailsContadorFrag_RV_fieldsList_SupportedTemperature">Supported Temperature</string>
    <string name="mainActivity_DetailsContadorFrag_RV_fieldsList_Status">Meter Status</string>
    <!-- MAIN ACTIVITY | READINGS CONTADOR -->
    <string name="mainActivity_ReadingsContadorFrag_LabelDetails">Reading Details</string>
    <string name="mainActivity_ReadingsContadorFrag_LabelReadings">Readings</string>
    <!-- MAIN ACTIVITY | ADD READINGS -->
    <string name="mainActivity_AddReadingsFrag_Meter">Meter</string>
    <string name="mainActivity_AddReadingsFrag_Technician">Technician</string>
    <string name="mainActivity_AddReadingsFrag_Reading">Reading</string>
    <string name="mainActivity_AddReadingsFrag_AcConsumption">Accumulated Consumption</string>
    <string name="mainActivity_AddReadingsFrag_WaterPressure">Water Pressure</string>
    <!-- MAIN ACTIVITY | REPORTS -->
    <string name="mainActivity_ReportsFrag_TextView_NothingToDisplay">Theres no Reports to be displayed.</string>
    <string name="mainActivity_ReportsFrag_Label">Reports</string>
    <!-- MAIN ACTIVITY | ADD REPORT -->
    <string name="mainActivity_AddReportFrag_ComboBox_Meter">Meter</string>
    <string name="mainActivity_AddReportFrag_ComboBox_Problem">Problem</string>
    <string name="mainActivity_AddReportFrag_TextField_Description">Description</string>
    <string name="mainActivity_AddReportFrag_TextField_Other_Problem">Other</string>
    <!-- MAIN ACTIVITY | READINGS DO CONTADOR | RV-->
    <string name="mainActivity_ReadingsContadorFrag_RV_fieldsList_ID">Reference</string>
    <string name="mainActivity_ReadingsContadorFrag_RV_fieldsList_Creator">Creator</string>
    <string name="mainActivity_ReadingsContadorFrag_RV_fieldsList_AdressContador">Meter Address</string>
    <string name="mainActivity_ReadingsContadorFrag_RV_fieldsList_Reading">Reading</string>
    <string name="mainActivity_ReadingsContadorFrag_RV_fieldsList_AccumulatedConsumption">Accumulated Consumption</string>
    <string name="mainActivity_ReadingsContadorFrag_RV_fieldsList_Date">Date</string>
    <string name="mainActivity_ReadingsContadorFrag_RV_fieldsList_WaterPressure">WaterPressure</string>
    <!-- MAIN ACTIVITY | SETTINGS -->
    <string name="mainActivity_SettingsFrag_Username">Username</string>
    <string name="mainActivity_SettingsFrag_Email">Email</string>
    <string name="mainActivity_SettingsFrag_BDate">Birth Date</string>
    <string name="mainActivity_SettingsFrag_Address">Address</string>
    <string name="mainActivity_SettingsFrag_UserEmailTaken">Username or Email already taken.</string>
    <string name="mainActivity_SettingsFrag_AlertDialog_SaveButton_Title">Do you wish to continue?</string>
    <string name="mainActivity_SettingsFrag_AlertDialog_SaveButton_Desc">For security reason after editing your information you are gonna need to login again. Do you wish to continue?</string>


    <!-- API METHODS -->
    <string name="apiMethods_JsonParseError">JSON PARSE ERROR</string>
    <string name="apiMethods_VolleyError">VOLLEY ERROR</string>

    <!-- CREDITS -->
    <string name="mainActivity_CreditsFrag_Header">Credits</string>
    <string name="credits_developers_1">2241567 - Alexandre Conrado</string>
    <string name="credits_developers_2">2241570 - Guilherme Silva</string>
    <string name="credits_developers_3">2241572 - Diogo Soares</string>
    <string name="credits_icons_search">Search - Created by Royyan Wijaya - Flaticon</string>
    <string name="credits_icons_water_drop">Water Drop - Created by Good Ware - Flaticon</string>
    <string name="credits_icons_radios_button_icon">Radios Button Icon - Created by Bharat Icons - Flaticon</string>
    <string name="credits_icons_warning">Warning - Created by Gregor Cresnar - Flaticon</string>
    <string name="credits_icons_info">Info - Created by Stockio - Flaticon</string>
    <string name="credits_icons_exit">Exit - Created by Freepik - Flaticon</string>
    <string name="credits_icons_settings">Settings - Created by Freepik - Flaticon</string>
    <string name="credits_icons_arrow">Arrow - Created by Ilham Fitrotul Hayat - Flaticon</string>
    <string name="credits_icons_close">Close - Created by inkubators - Flaticon</string>
    <string name="credits_icons_edit">Edit - Created by Pixel perfect - Flaticon</string>
</resources>